kubernetes/home/apps/default/plex/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex               # < label for tagging and reference
  name: plex                # < name of the deployment
  namespace: default        # < namespace where to place the deployment and pods
spec:
  replicas: 1                     # < number of pods to deploy
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: plex
  strategy:
    rollingUpdate:
      maxSurge: 0                 # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1           # < The number of pods that can be unavailable during the update process
    type: RollingUpdate           # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
      - name: nfs-movies
        persistentVolumeClaim:
          claimName: plex-nfs-movies
      - name: nfs-tv
        persistentVolumeClaim:
          claimName: plex-nfs-tv
      containers:
      - env:                       # < environment variables. See https://hub.docker.com/r/linuxserver/plex
        - name: PLEX_CLAIM
          valueFrom:
            secretKeyRef:
              name: plex-secrets
              key: PLEX_CLAIM
        - name: PGID
          value: "\x31\x30\x30\x30"    # < ASCII code for '1000'
        - name: PUID
          value: "\x31\x30\x30\x30" # < ACII code for '1000'
        - name: VERSION
          value: latest
        - name: TZ
          value: Australia/Sydney  # < Timezone
        - name: ADVERTISE_IP
          value: http://10.10.0.82:32400/
        - name: ALLOWED_NETWORKS
          value: 10.0.0.0/24,10.10.0.0/24,10.4.0.0/24,192.168.90.0/24,192.168.91.0/24,10.43.0.0/16,10.42.0.0/16
        image: ghcr.io/linuxserver/plex
        imagePullPolicy: Always    # < always use the latest image when creating container/pod
        name: plex
        ports:
        - containerPort: 32400     # < required network portnumber. See https://hub.docker.com/r/linuxserver/plex
          name: pms-web            # < reference name from the port in the service yaml
          protocol: TCP
        - containerPort: 32469
          name: dlna-tcp
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 3005
          name: plex-companion
          protocol: TCP  
        - containerPort: 5353
          name: discovery-udp
          protocol: UDP  
        - containerPort: 8324
          name: plex-roku
          protocol: TCP  
        - containerPort: 32410
          name: gdm-32410
          protocol: UDP
        - containerPort: 32412
          name: gdm-32412
          protocol: UDP
        - containerPort: 32413
          name: gdm-32413
          protocol: UDP
        - containerPort: 32414
          name: gdm-32414
          protocol: UDP
        resources: {}
        stdin: true
        tty: true
        volumeMounts:            # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
        - mountPath: /data/movies
          name: nfs-movies
        - mountPath: /data/tv
          name: nfs-tv
      restartPolicy: Always
