kubernetes/home/apps/default/plex/app/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: plex-udp              # < name of the service
  namespace: default          # < namespace where to place service
spec:
  selector:
    app: plex           # < reference to the deployment (connects the service with the deployment)
  ports:
  - port: 1900                # < port to open on the outside on the server
    targetPort: 1900          # < targetport. port on the pod to passthrough
    name: dlna-udp            # < reference name for the port in the deployment yaml
    protocol: UDP
  - port: 5353
    targetPort: 5353
    name: discovery-udp
    protocol: UDP
  - port: 32410
    targetPort: 32410
    name: gdm-32410
    protocol: UDP
  - port: 32412
    targetPort: 32412
    name: gdm-32412
    protocol: UDP
  - port: 32413
    targetPort: 32413
    name: gdm-32413
    protocol: UDP
  - port: 32414
    targetPort: 32414
    name: gdm-32414
    protocol: UDP
  # type: LoadBalancer
  # loadBalancerIP: 10.10.0.82  # < IP to access your plexserver. Should be one from the MetalLB range and the same as the UDP yaml
---
kind: Service
apiVersion: v1
metadata:
  name: plex-tcp              # < name of the service
  namespace: default          # < namespace where to place service
spec:
  selector:
    app: plex           # < reference to the deployment (connects the service with the deployment)
  ports:                      
  - port: 32400               # < port to open on the outside on the server
    targetPort: 32400         # < targetport. port on the pod to passthrough
    name: pms-web             # < reference name for the port in the deployment yaml
    protocol: TCP
  - port: 3005
    targetPort: 3005
    name: plex-companion
  - port: 8324
    name: plex-roku
    targetPort: 8324  
    protocol: TCP  
  - port: 32469
    targetPort: 32469
    name: dlna-tcp
    protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 10.10.0.82  # < IP to access your plexserver. Should be one from the MetalLB range and the same as the TCP yaml
